# SpotifySnapshot

./: .gitignore  main.py  misc.py  pyproject.toml  replit.nix
db/: init_db.py  schema.sql
static/: index.js  index.scss
templates/: error.html  footer.html  getit-error.html  getit.html  history.html  history_template.html  index.html
